--- a/src/style/sass/abstracts/_variables.sass
+++ b/src/style/sass/abstracts/_variables.sass
@@ -18,4 +18,4 @@ $modal-first-break: 980px
 $first-break: 768px
 $second-break: 650px
 
-$breaks: ("acs-large": 1200px, "acs-med": 992px, "modal": 980px, "acs-small": 768px, "x-small": 650px)
+$breaks: ("acs-large": 1200px, "acs-med": 992px, "med": 980px, "acs-small": 768px, "x-small": 650px)
