--- a/src/style/sass/components/_landmark.sass
+++ b/src/style/sass/components/_landmark.sass
@@ -1,9 +1,9 @@
-/* LANDMARK STYLES - COMPONENTS/LANDMARK.SCSS
+/* LANDMARK STYLES - COMPONENTS/LANDMARK.SASS
 
 .landmark-container
   height: 50%
 
-  @media all and (max-width: $first-break)
+  @media all and (max-width: breakpoint(acs-small))
     +flex(row-reverse, center, space-between)
 
     flex-direction: row-reverse !important
@@ -17,7 +17,7 @@
     &:not(.single)
       padding: 0
 
-  @media all and (max-width: $second-break)
+  @media all and (max-width: breakpoint(x-small))
     +flex(column-reverse, center, center)
 
     flex-direction: column-reverse !important
@@ -51,7 +51,7 @@
   &.single
     margin-top: 175px
 
-    @media all and (max-width: $first-break)
+    @media all and (max-width: breakpoint(acs-small))
       margin-top: 0
 
   &:not(.single)
@@ -66,13 +66,15 @@
 
   height: 37.5px
 
-  @media all and (max-width: $first-break)
+  @media all and (max-width: breakpoint(acs-small))
+    justify-content: space-between
     order: 1
     margin: 0 0.375em 0 0
 
-  @media all and (max-width: $second-break)
-    +flex(row, center, space-between)
+  @media all and (max-width: breakpoint(x-small))
+    // +flex(row, center, space-between)
 
+    flex-direction: row
     margin: 0
     width: 100%
 
@@ -85,14 +87,14 @@
     display: none
     margin: 0 0 0.75em 0
 
-    @media all and (max-width: $first-break)
+    @media all and (max-width: breakpoint(acs-small))
       display: block
 
-    @media all and (max-width: $second-break)
+    @media all and (max-width: breakpoint(x-small))
       margin: 0
 
   .landmark-year
-    @media all and (max-width: $second-break)
+    @media all and (max-width: breakpoint(x-small))
       margin: 0
 
 .info
@@ -100,11 +102,11 @@
 
   height: 37.5px
 
-  @media all and (max-width: $first-break)
+  @media all and (max-width: breakpoint(acs-small))
     margin-left: 55px
     width: 70%
 
-  @media all and (max-width: $second-break)
+  @media all and (max-width: breakpoint(x-small))
     height: auto
     margin: 0 0 1.5em 0
     width: 100%
@@ -117,12 +119,12 @@
     color: $blue
 
 
-  @media all and (max-width: $first-break)
+  @media all and (max-width: breakpoint(acs-small))
     color: $blue
     font-size: 1.375em
     text-align: left
 
-  @media all and (max-width: $second-break)
+  @media all and (max-width: breakpoint(x-small))
     text-align: center
     width: 100%
 
@@ -131,10 +133,10 @@
   display: none
   text-align: left
 
-  @media all and (max-width: $first-break)
+  @media all and (max-width: breakpoint(acs-small))
     display: block
 
-  @media all and (max-width: $second-break)
+  @media all and (max-width: breakpoint(x-small))
     text-align: center
     width: 100%
 
@@ -143,7 +145,7 @@
   line-height: 1.5em
   margin: 0.25em 0
 
-  @media all and (max-width: $second-break)
+  @media all and (max-width: breakpoint(x-small))
     margin: 0
 
 .landmark-link
@@ -153,23 +155,23 @@
     weight: 600
   margin: 0.25em 0 0 0
 
-  @media all and (max-width: $second-break)
+  @media all and (max-width: breakpoint(x-small))
     margin-top: 0.625em
     text-align: center
 
   svg
-    @media all and (max-width: $second-break)
+    @media all and (max-width: breakpoint(x-small))
       display: none
 
 .landmark-line
   border-left: 3px solid rgba($black, 0.25)
   height: 100px
 
-  @media all and (max-width: $first-break)
+  @media all and (max-width: breakpoint(acs-small))
     margin: 0 !important
     transform: rotate(90deg)
 
-  @media all and (max-width: $second-break)
+  @media all and (max-width: breakpoint(x-small))
     display: none
 
 .landmark
@@ -180,11 +182,11 @@
   height: 200px
   width: 235px
 
-  @media all and (max-width: $first-break)
+  @media all and (max-width: breakpoint(acs-small))
     height: 160px
     width: 210px
 
-  @media all and (max-width: $second-break)
+  @media all and (max-width: breakpoint(x-small))
     height: 200px
     margin: 1em 0 1.5em
     width: 235px
