--- a/src/style/sass/components/_modal.sass
+++ b/src/style/sass/components/_modal.sass
@@ -12,7 +12,7 @@
   position: relative
   width: 70%
 
-  @media all and (max-width: $modal-first-break)
+  @media all and (max-width: breakpoint(med))
     width: 80%
     max-width: 80%
 
@@ -49,7 +49,7 @@
 
 .modal-landmark-year
   font-size: 2em
-  margin: 0 0 .25em
+  margin: 0 0 0.25em
 
 .modal-landmark-heading
   color: $blue
@@ -62,7 +62,7 @@
   font:
     size: 1.2em
     weight: 300
-  margin: .5em 0 2em
+  margin: 0.5em 0 2em
 
 .modal-landmark-link
   color: $black
