--- a/src/style/sass/components/_navigation.sass
+++ b/src/style/sass/components/_navigation.sass
@@ -1,4 +1,4 @@
-/* NAVIGATION STYLES - COMPONENTS/NAVIGATION.SCSS
+/* NAVIGATION STYLES - COMPONENTS/NAVIGATION.SASS
 
 // abstract classes
 %active-link
@@ -24,7 +24,7 @@
 
     @media all and (max-width: $first-break)
       font-size: 1.75em
-      margin: 0 .5em
+      margin: 0 0.5em
 
   &.active
     @extend %active-link
